--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "next": "13.0.6",
+    "nookies": "^2.5.2",
     "pocketbase": "^0.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
